--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -29,13 +29,33 @@ h4 {
   width: 10%;
 }
 
+.headerNavigation {
+  /* background-color: aquamarine; */
+  width: 18%;
+  display: flex;
+  justify-content: center;
+}
+
 .navigationList {
   border: 1px none crimson;
+  display: flex;
+  flex: 1;
+  /* justify-content: space-between; */
+  /* background-color: coral; */
 }
 
 .navigationList1 {
   border: 1px none black;
-  padding-top: 20px;
+  /* padding-top: 20px; */
+  padding: 20px 20px 0 10px;
+  flex: 1;
+  text-align: center;
+}
+
+.navigationList2 {
+  border: 1px none black;
+  /* padding-top: 20px; */
+  padding: 20px 0 0 20px;
   flex: 1;
   text-align: center;
 }
@@ -45,11 +65,16 @@ h4 {
   border-top: 1px solid blue;
 }
 
-.navigationList {
+.navigationList2:hover {
+  /* border: 1px solid black; */
+  border-top: 1px solid blue;
+}
+
+/* .navigationList {
   display: flex;
   justify-content: space-between;
   width: 200px;
-}
+} */
 
 main {
   margin-top: 30px;
@@ -187,7 +212,7 @@ main {
   background-color: white;
   padding: 5px;
   margin: 15px;
-  box-shadow: 10px 10px 10px #7775756e;
+  box-shadow: 5px 5px 5px #e8e5e5;
 }
 
 .imageBloc1 {
@@ -247,7 +272,7 @@ main {
   margin-top: 10px;
   margin-bottom: 15px;
   background-color: white;
-  box-shadow: 10px 10px 10px #7775756e;
+  box-shadow: 5px 5px 5px #e8e5e5;
 }
 
 .imageBloc2 {
@@ -282,6 +307,7 @@ main {
 .figureContainer2 {
   margin-top: 60px;
   margin-bottom: 50px;
+  /* background-color: coral; */
 }
 
 .figureContainer2BlocContent {
@@ -296,24 +322,35 @@ main {
 
 .figureContainer2Bloc {
   display: flex;
+  /* width: 100%; */
   /* flex: 1; */
   /* background-color: blueviolet; */
+  margin-right: 20px;
+}
+
+.figureContainer2Bloc1 {
+  display: flex;
+  /* width: 100%; */
+  /* flex: 1; */
+  /* background-color: red; */
+  margin-left: 20px;
 }
 
 .figure2Bloc1 {
   border: 1px none red;
   border-radius: 15px 15px 15px 15px;
-  width: 300px;
+  width: 60%;
   box-sizing: content-box;
   background-color: white;
   box-shadow: 5px 5px 5px #f2f2f2;
 }
 
 .image2Bloc1 {
-  width: 300px;
+  width: 100%;
   height: 400px;
   border: 1px none green;
   border-radius: 15px 15px 0 0;
+  object-fit: cover;
 }
 
 .figureContainer2Bloc2 {
@@ -321,6 +358,7 @@ main {
   flex-direction: column;
   justify-content: space-between;
   margin-left: 50px;
+  width: 50%;
 }
 
 .figure2Bloc2 {
@@ -328,13 +366,15 @@ main {
   border-radius: 15px 15px 15px 15px;
   background-color: white;
   box-shadow: 5px 5px 5px #f2f2f2;
+  width: 100%;
 }
 
 .image2Bloc2 {
-  width: 300px;
+  width: 100%;
   height: 200px;
   border: 1px none green;
   border-radius: 15px 15px 0 0;
+  object-fit: cover;
 }
 
 .figure2Bloc2 p {
@@ -346,13 +386,15 @@ main {
   border-radius: 15px 15px 15px 15px;
   background-color: white;
   box-shadow: 5px 5px 5px #f2f2f2;
+  width: 100%;
 }
 
 .image2Bloc3 {
-  width: 300px;
+  width: 100%;
   height: 100px;
   border: 1px none green;
   border-radius: 15px 15px 0 0;
+  object-fit: cover;
 }
 
 .figure2Bloc3 p {
