--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -26,7 +26,7 @@ h4 {
 }
 
 .headerLogo {
-  width: 10%;
+  width: 7%;
 }
 
 .headerNavigation {
@@ -168,9 +168,9 @@ main {
 }
 
 .fa-info {
-  border: 1px solid black;
+  border: 1px solid #f2f2f2;
   border-radius: 50%;
-  padding: 5px;
+  padding: 6px 10px;
   color: #0065fc;
 }
 
