--- a/asset/css/phone.css
+++ b/asset/css/phone.css
@@ -37,12 +37,15 @@
 
   .navigationList1 {
     padding-bottom: 10px;
-    padding-left: 60px;
+    /* padding-left: 40px; */
+    width: 50%;
+    text-align: center;
   }
 
   .navigationList2 {
     padding-bottom: 10px;
-    padding-right: 60px;
+    width: 50%;
+    text-align: center;
   }
 
   .navigationList1:hover {
@@ -70,6 +73,14 @@
     margin: 0 auto;
     margin-top: 30px;
     margin-left: 20px;
+  }
+
+  .localisationSearch {
+    display: none;
+  }
+
+  .fa-search {
+    display: unset;
   }
 
   /* FILTRE */
@@ -112,7 +123,7 @@
   /* FIGURE */
 
   .figureContainer {
-    justify-content: none;
+    justify-content: unset;
     flex-direction: column-reverse;
     width: 100%;
     /* background-color: mediumblue; */
@@ -155,7 +166,7 @@
   .figureBloc1 {
     width: 100%;
     /* background-color: tomato; */
-    justify-content: none;
+    justify-content: unset;
   }
 
   #hebergement {
@@ -216,7 +227,7 @@
   .figureContainer2Bloc2 {
     width: 100%;
     margin-left: 0;
-    justify-content: none;
+    justify-content: unset;
     flex-direction: column-reverse;
   }
 
@@ -255,7 +266,7 @@
 
   .footerList2 {
     /* margin: 10px 0 10px 0; */
-    justify-content: none;
+    justify-content: unset;
   }
 
   .footerList3 {
