--- a/asset/css/adapt.css
+++ b/asset/css/adapt.css
@@ -4,6 +4,10 @@
     overflow-x: hidden;
   }
 
+  .fa-search {
+    display: none;
+  }
+
   .filtreContainer {
     /* background-color: gold; */
     width: 100%;
