--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -106,6 +106,7 @@ main {
   border-radius: 0 10px 10px 0;
   border-left: none;
   padding: 15px;
+  display: unset;
 }
 
 .fa-search {
@@ -116,7 +117,7 @@ main {
   border-left: none;
   padding: 15px;
   margin-left: -10px;
-  display: none;
+  visibility: hidden;
 }
 
 /* FILTRE */
